adicionando as novas aulas

--- a/Aulas/Aula05/ex002.html
+++ b/Aulas/Aula05/ex002.html
@@ -17,7 +17,9 @@
         window.prompt ("Qual é o seu nome: ")*/
 
         window.prompt ("Qual é o seu nome: ")
-        var nome = 'Lucas'
+        window.confirm ("Esta gostando?")
+
+        var nome = `GT`
     </script>
 </body>
 </html>
