--- a/Aulas/Aula06/ex004.html
+++ b/Aulas/Aula06/ex004.html
@@ -14,7 +14,7 @@
     </style>
     <script>
         nome = prompt("Digite seu nome: ")
-        document.write (`Seu nome tem ${nome.length} caracteres//`)
+        document.write(`Seu nome, ${nome.toUpperCase()}, tem ${nome.length} caracteres `)
 
         salario = Number(prompt ("Digite seu saldo: "))
         document.write (`Você tem ${salario.toFixed(2).replace ('.',',')}//`) 
