--- a/Aulas/Aula06/ex003.html
+++ b/Aulas/Aula06/ex003.html
@@ -12,17 +12,23 @@
 
     <script>
         /* var nome = window.prompt ("Qual é o seu nome: ")
-        window.alert ("Seja bem-vindo(a) " + nome ) // o   +   faz liga a variavel na frase    */
+        window.alert ("Seja bem-vindo(a) " + nome ) // o   +   faz contatenação a variavel na frase    */
 
         n1 = Number.parseFloat (window.prompt ('Digite um numero: '))
-        n2 = Number(window.prompt ('Digita outro numero: '))
+        n2 = Number(window.prompt ('Digita outro numero: ')) //apenas o numer, ele se vira e descobre o que for vir, mas no estilo de numero
         //Number.parseInt  vc recebeu no prompt uma STRING, ai vc tem que transformar em um NUMERO
 
         // você pode usar apenas o Number(comando), vai funcionar(JS descobre o tipo sozinho), mas caso queira forçar ele a usar um, usa o de cima
         total = n1 + n2
-        alert(`A soma final foi ${total}, com a soma do ${n1} mais do ${n2}`)
-
+        alert(`A soma final foi ${total}, com a soma do ${n1} mais do ${n2}`) 
+        
         // para trocar para STRING faz assim:             alert("A soma final foi "+ String(total))
+
+
+
+        // transofrmando para texto, vc pode usar esses dois comandos 
+        String(total)
+        total.toString()
     </script>
 </body>
 </html>
